--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,3 +33,23 @@ jobs:
       - run: npm install
 
       - run: npm test
+
+  distUpToDateCheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: npm install
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Verify dist is up-to-date
+        run:
+          git diff --exit-code
