--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: 'The GitHub token that read and write access to your repository.'
     required: false
     default: ${{ github.token }}
+  summaraizer-version:
+    description: 'The version of summaraizer to install and use'
+    required: false
+    default: 'v0.0.1-alpha.00'
   provider:
     description: 'The AI provider to use. Default is openai.'
     required: false
