--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,26 @@ jobs:
 
       - run: npm test
         env:
-            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  testInstallSummaraizer:
+    strategy:
+      matrix:
+        os: [macos-13, macos-14, ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - run: npm install
+
+      - run: npm test -- --grep "installSummaraizer"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   distUpToDateCheck:
     runs-on: ubuntu-latest
