--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,11 +17,6 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install Go to install summaraizer
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.22.2'
-
       - name: Install ollama to call it via summaraizer
         run: curl -fsSL https://ollama.com/install.sh | sh
 
@@ -33,6 +28,27 @@ jobs:
       - run: npm install
 
       - run: npm test
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  testInstallSummaraizer:
+    strategy:
+      matrix:
+        os: [macos-13, macos-14, ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - run: npm install
+
+      - run: npm test -- --grep "installSummaraizer"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   distUpToDateCheck:
     runs-on: ubuntu-latest
